<resources>
    <string name="app_name">Fakdoo</string>
    <string name="skip">Skip</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_mobile">Continue With Mobile</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="we_won_t_share_your_personal_details_with_anyone">We won\'t share your personal details with anyone</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="next">NEXT</string>
    <string name="we_won_t_reveal_your_number_to_anyone_else_nor_use_it_to_send_you_spam">We won\'t reveal your number to anyone else nor use it to send you spam</string>
    <string name="login">LOGIN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="code">CODE</string>
    <string name="mobile_no">MOBILE NUMBER</string>
    <string name="enter_otp_sent_on_phone">Enter OTP sent on phone</string>
    <string name="enter_mobile_no">Enter Your Mobile Number</string>
    <string name="enter_otp_sent_on_email">Enter Your OTP</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="submit">SUBMIT</string>
    <string name="otp_number">OTP NUMBER</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_with_otp">LOGIN WITH OTP</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="email_id">EMAIL ID</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="i_have_accepted_terms_and_conditions">I have accepted terms and conditions.</string>
    <string name="your_email_address">Your Email address</string>
    <string name="title_activity_details_post">DetailsPostActivity</string>

    <string name="action_settings">Settings</string>
    <string name="seller_information">SELLER INFORMATION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="chat">CHAT</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="free_post">FREE POST</string>
    <string name="myAds">My Ads</string>
    <string name="active">Active</string>
    <string name="expired">Expired</string>
    <string name="upgrade_post">UPGRADE POST</string>
    <string name="premium">Premium</string>
    <string name="category">CATEGORY:</string>
    <string name="type">TYPE:</string>
    <string name="posted_on">POSTED ON</string>
    <string name="active_till">ACTIVE TILL</string>
    <string name="edit_post">Edit Post</string>
    <string name="remove_post">Remove Post</string>
    <string name="cancel">Cancel</string>
    <string name="select_plan">Select your plan for Upgrade Ad</string>
    <string name="redeem_Upgrade">Redeem your plan for Upgrade Ad</string>
    <string name="upgrade_supreme"><U>UPGRADE AD WITH SUPREME</U></string>
    <string name="upgrade_premium">UPGRADE AD WITH PREMIUM</string>
    <string name="redeem_packages">REDEEM PACKAGES</string>
    <string name="supreme">Supreme</string>
    <string name="Continue">CONTINUE</string>
    <string name="better3x">3x better visibility</string>
    <string name="better2x">2x better visibility</string>
    <string name="redeem_plan">Choose plan to redeem</string>
    <string name="remaining">Remaining</string>
    <string name="ads_pack3">3 Ads pack</string>
    <string name="ads_pack5">5 Ads pack</string>
    <string name="ads3">3 Ads</string>
    <string name="ads1">1 Ads</string>
    <string name="expiredOn">Expired On Apr-01-2020</string>
    <string name="done">DONE</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="free">FREE</string>
    <string name="activeSupreme">ACTIVE AD WITH SUPREME</string>
    <string name="activePremium">ACTIVE AD WITH PREMIUM</string>
    <string name="editAds">EDIT AD</string>
    <string name="reactiveAds">Select your plan for Reactive Ad</string>
    <string name="free90">Active till 90 days</string>
    <string name="redeem_reactiveAds">Redeem your plan for Reactive Ad</string>

    <string name="mywishlist">My Wishlist</string>
    <string name="myplan">My Plans</string>
    <string name="purchase_plan">PURCHASE PLAN</string>
    <string name="no_plan">YOU DID NOT HAVE\nANY PLANS YET</string>
    <string name="myplan_supreme">SUPREME</string>
    <string name="myplan_premium">PREMIUM</string>
    <string name="pack_id">PACK ID</string>
    <string name="category_plan">CATEGORY</string>
    <string name="location">LOCATION</string>
    <string name="ad_package">AD PACKAGE</string>
    <string name="purchase_date">PURCHASED DATE</string>
    <string name="expired_date">EXPIRED DATE</string>
    <string name="download_invoice">DOWNLOAD INVOICE</string>

    <string name="allplan">All Plans</string>
    <string name="month">1 month</string>
    <string name="off">38% off</string>
    <string name="rs">\u20B9 2495</string>

    <string name="payment_method">Payment Method</string>
    <string name="settng">Settings</string>
    <string name="faq">FAQ</string>
    <string name="change_password">Change Password</string>
    <string name="legal_policy">Legal &amp; Policy</string>
    <string name="about_fakdoo">About Fakdoo</string>
    <string name="share">Share</string>
    <string name="logout_setting">Logout</string>

    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="update">UPDATE</string>

    <string name="helpsupport">Help &amp; Support</string>
    <string name="select_subject">SELECT SUBJECT</string>
    <string name="description">DESCRIPTION</string>
    <string name="desc_text">Description must be at least 300 characters long</string>
    <string name="countword">0/300</string>
    <string name="verify_email">Your email is not verified.\nPlease verify.</string>
    <string name="verify">VERIFY</string>
    <string name="cancelemail">CANCEL</string>
    <string name="submit_successfully">Submited Successfully</string>
    <string name="webview">Web View</string>
    <string name="about">About</string>

    <string name="whatsapp">WhatsApp</string>

    <string name="alert">ALERTS</string>
    <string name="alert_msg">YOU DID NOT SET \nANY ALERTS</string>
    <string name="set_alerts">SET ALERTS</string>

    <string name="realty">Realty</string>
    <string name="cars">Cars</string>
    <string name="bike">Bikes</string>
    <string name="mobile_tab">Mobile &amp; Tabs</string>
    <string name="job">Jobs</string>
    <string name="fashion_jewelers">Fashion &amp; Jewels</string>
    <string name="market">Market</string>
    <string name="business">Business</string>
    <string name="pets_care">Pets Care</string>
    <string name="kid">Kids</string>
    <string name="electronic">Electronics</string>
    <string name="services">Services</string>
    <string name="commercial_vehicle">Commercial Vehicles</string>
    <string name="sports_fitness">Sports &amp; Fitness</string>
    <string name="bicycle">Bicycles</string>
    <string name="pg">Pg</string>
    <string name="pre_lease">Pre-lease</string>

    <string name="have_used">I HAVE - USED</string>
    <string name="matching_ads">MATCHING ADS</string>
    <string name="subcategory">SUBCATEGORY : </string>
    <string name="create_new_alerts">CREATE NEW ALERT</string>
    <string name="alert_success">You alert created \nsuccessfully</string>
    <string name="edit_alert">Edit alert</string>
    <string name="remove_alert">Remove alert</string>
    <string name="alerts">Alerts</string>
    <string name="remove_alerts">Are you sure want to \nRemove your alert?</string>

    <string name="filter">Filter by</string>
    <string name="apply">APPLY</string>
    <string name="reset">RESET</string>
    <string name="categories">Categories</string>


    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="help_support"><![CDATA[HELP & SUPPORT]]></string>
    <string name="choose_a_category">CHOOSE A CATEGORY</string>
    <string name="upload_photos_or_viedo">UPLOAD PHOTOS OR VIEDO</string>
</resources>
