<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="30dp"
    tools:context=".LoginWithEmail">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="26dp"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_arrow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/final_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/enter_email_id"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id" />

            <androidx.appcompat.widget.AppCompatEditText

                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email_address"
                android:text="bhargav@techeniac.com"
                android:inputType="textEmailAddress" />
        </LinearLayout>


        <TextView
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/oval_next_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />



    </LinearLayout>
</RelativeLayout>