<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/ablsetting">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_arrow"
                    android:contentDescription="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/settng"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ablsetting"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:fontFamily="@font/regular"
        android:padding="17dp"
        android:text="@string/faq"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tvFaq"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:fontFamily="@font/regular"
        android:padding="17dp"
        android:text="@string/change_password"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tvChangePassword"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLegalPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:fontFamily="@font/regular"
        android:padding="17dp"
        android:text="@string/legal_policy"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tvLegalPolicy"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAboutFakdoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:fontFamily="@font/regular"
        android:padding="17dp"
        android:text="@string/about_fakdoo"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tvAboutFakdoo"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:fontFamily="@font/regular"
        android:padding="17dp"
        android:text="@string/share"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tvShare"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:layout_below="@+id/view5"
        android:padding="17dp"
        android:text="@string/logout_setting"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/tvLogout"
        android:background="@color/colorGray" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="App Version 0.12"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>