<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="30dp"
    tools:context=".login_with_mobile">

    <ImageButton
        android:layout_marginTop="10dp"
        android:id="@+id/btnBack"
        android:layout_width="26dp"
        android:layout_height="18dp"
        android:background="@drawable/back_arrow"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/final_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/enter_your_phone"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="+91" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MOBILE NUMBER" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobile_number"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000000000" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/btnNext"
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/oval_next_orange"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_won_t_reveal_your_number_to_anyone_else_nor_use_it_to_send_you_spam"
            android:textSize="10dp" />

    </LinearLayout>
</RelativeLayout>