<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_rectangle_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlertCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/colorBlack"
            android:text="@string/cars" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_family_regular"
        android:gravity="center_horizontal"
        android:text="@string/alert_success"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
