<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllPlanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:id="@+id/ablAllPlan">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_arrow"
                    android:contentDescription="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/allplan"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lldetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/ablAllPlan"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/semibold"
            android:text="@string/state"
            android:textColor="@color/color_707070"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtPlanState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:fontFamily="@font/regular"
            android:inputType="text"
            android:text="@string/state"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/semibold"
            android:text="@string/city"
            android:textColor="@color/color_707070"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtPlanCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:fontFamily="@font/regular"
            android:inputType="text"
            android:text="@string/city"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/semibold"
            android:text="@string/category"
            android:textColor="@color/color_707070"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtPlanCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:fontFamily="@font/regular"
            android:inputType="text"
            android:text="@string/category"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltabname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_below="@+id/lldetails"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvSupreme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/supreme"
            android:textColor="@color/color_FF0000" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tvPremium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/premium"
            android:textColor="@color/color_707070" />

    </LinearLayout>

    <View
        android:id="@+id/viewHrz"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/lltabname"
        android:background="@color/colorGray" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpAllPlanList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewHrz"
        android:layout_marginBottom="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FB5C00"
        android:text="@string/purchase_plan"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/semibold"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
